--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navigation-menu></app-navigation-menu>
-<app-all-reports></app-all-reports>
+<app-take-actions></app-take-actions>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
