--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
-<app-navigation-menu></app-navigation-menu>
-<app-take-actions></app-take-actions>
+<app-test-home></app-test-home>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
