--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,16 @@
-<app-test-home></app-test-home>
+<app-navigation-menu></app-navigation-menu>
+
+<app-side-navigation></app-side-navigation>
+<!-- <app-all-reports></app-all-reports> -->
+<!-- <app-closed-requests></app-closed-requests>  -->
+ <app-my-requests-report></app-my-requests-report> 
+   <app-take-actions></app-take-actions> 
+    <!-- <app-new-request></app-new-request> -->
+    <!-- <app-view-request></app-view-request> -->
+  <app-homepage-main></app-homepage-main>
+ <app-my-tasks></app-my-tasks> 
+
+
+
+<app-footer></app-footer>
 <router-outlet></router-outlet>
