--- a/src/app/new-request/new-request.component.html
+++ b/src/app/new-request/new-request.component.html
@@ -1,4 +1,4 @@
-<section class="bg-light-gray">
+<section class="extra-padding">
     <div class="container">
         <div class="row">
             <div class="my-4 col-12">
@@ -21,6 +21,12 @@
                 <small class="mx-2">Finance</small>
             </div>
         </div>
+        </div>
+</section>
+<section class="bg-alt">
+    <div class="container">
+
+
         <div class="row">
             <div class="col-12">
                 <div class="my-4 custom-container">
