--- a/src/app/view-request/view-request.component.css
+++ b/src/app/view-request/view-request.component.css
@@ -2,3 +2,14 @@
     color: #696969;
     font-weight: 500;
 }
+.nav-link {
+    display: block;
+    padding: 0.5rem 1rem;
+    color: #008A91;
+    text-decoration: none;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+}
+.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    color: #fff;
+    background-color: #008A91;
+}
