--- a/src/app/all-reports/all-reports.component.html
+++ b/src/app/all-reports/all-reports.component.html
@@ -1,93 +1,95 @@
-<section class="bg-light-gray">
+<section class="extra-padding">
     <div class="container">
         <div class="row">
             <div class="mt-3 col-12">
                 <h3 class="text-black f-800">All Requests</h3>
             </div>
         </div>
+        <div class="custom-header">
+            <h6 class="text-black mb-2 f-800">Filter Requests</h6>
+            <button class="pl-2 gray-btn">
+                <small>RESET FILTERS</small>
+            </button>
+        </div>
         <div class="row">
+            <div class="col-12 col-md-4">
+                <div class="mb-3">
+                    <label class="f-500">Requester Name</label>
+                    <input type="text" class="special form-control">
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="mb-3">
+                    <label class="f-500">Request Number</label>
+                    <input type="number" class="special form-control">
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="mb-3">
+                    <label class="f-500">Requester Department</label>
+                    <select class="form-control special">
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="mb-3">
+                    <label class="f-500">Status</label>
+                    <select class="form-control special">
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="mb-3">
+                    <label class="f-500">Submission Date</label>
+                    <input type="date" class="special form-control">
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="mb-3">
+                    <label class="f-500">Closing Date</label>
+                    <input type="date" class="special form-control">
+                </div>
+            </div>
+            
+            <div class="col-12 col-md-4">
+                <div class="mb-3">
+                    <label class="f-500">Current Stakeholder</label>
+                    <input type="text" class="special form-control">
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <div class="mb-3">
+                    <label class="f-500">All Stakeholders</label>
+                    <input type="text" class="special form-control">
+                </div>
+            </div>
+            
+            <div class="col-12 col-md-4">
+                <div class="mb-3">
+                    <label class="f-500">Fraud Case</label>
+                    <input type="text" class="special form-control">
+                </div>
+            </div>
+         
             <div class="col-12">
-                <div class="my-2 custom-container">
-                    <div class="custom-header">
-                        <h6 class="text-black mb-2 f-800">Filter Requests</h6>
-                        <button class="pl-2 gray-btn">
-                            <small>RESET FILTERS</small>
-                        </button>
-                    </div>
-                    <div class="row">
-                        <div class="col-12 col-md-4">
-                            <div class="mb-3">
-                                <label class="f-500">Request Number</label>
-                                <input type="text" class="special form-control">
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="mb-3">
-                                <label class="f-500">Submission Date</label>
-                                <input type="date" class="special form-control">
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="mb-3">
-                                <label class="f-500">Closing Date</label>
-                                <input type="date" class="special form-control">
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="mb-3">
-                                <label class="f-500">Status</label>
-                                <select class="form-control special">
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="mb-3">
-                                <label class="f-500">Current Stakeholder</label>
-                                <input type="text" class="special form-control">
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="mb-3">
-                                <label class="f-500">All Stakeholders</label>
-                                <input type="text" class="special form-control">
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="mb-3">
-                                <label class="f-500">Requester Department</label>
-                                <select class="form-control special">
-                                    <option value="1">One</option>
-                                    <option value="2">Two</option>
-                                    <option value="3">Three</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="mb-3">
-                                <label class="f-500">Fraud Case</label>
-                                <input type="text" class="special form-control">
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <div class="mb-3">
-                                <label class="f-500">Requester</label>
-                                <input type="text" class="special form-control">
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="mt-4 text-center">
-                                <button class="pink-btn">
-                                    FILTER CASES
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+                <div class="mt-4 text-center">
+                    <button class="pink-btn">
+                        FILTER CASES
+                    </button>
                 </div>
             </div>
         </div>
+        </div>
+        </section>
+        <section class="bg-alt">
+            <div class="container">
+           
         <div class="row">
             <div class="col-12">
                 <div class="my-1 mb-4 custom-container">
