--- a/src/app/closed-requests/closed-requests.component.html
+++ b/src/app/closed-requests/closed-requests.component.html
@@ -1,10 +1,16 @@
-<section class="bg-light-gray">
+<section class="extra-padding">
     <div class="container">
         <div class="row">
             <div class="mt-3 col-12">
                 <h3 class="text-black f-800">Archeived Requests</h3>
             </div>
         </div>
+        </div>
+        </section>
+        <section class="bg-alt">
+          <div class="container">
+
+       
         <div class="row">
             <div class="col-12">
                 <div class="my-1 mb-4 custom-container">
