--- a/src/app/navigation-menu/navigation-menu.component.css
+++ b/src/app/navigation-menu/navigation-menu.component.css
@@ -1,4 +1,4 @@
-@media (min-width: 992px){
+/* @media (min-width: 992px){
     .navbar-expand-lg .navbar-collapse {
         justify-content: end;
     }
@@ -15,4 +15,62 @@ button.nav-link.action-btn {
 }
 button.nav-link.action-btn .text-pink{
     padding-right: 10px;
+} */
+.profile .dropdown-item:focus, .dropdown-item:hover {
+    color: #1e2125;
+    background-color: #eaf6f7;
+}
+.mainLogo{
+    background: #eaf6f7;
+    padding: 5px;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+fa-icon.ng-fa-icon.text-pink {
+    padding-right: 10px;
+}
+button.nav-link.action-btn {
+    background-color: #000;
+    border: 0;
+    color: #fff;
+}
+@media (min-width: 992px) and (max-width: 1100px) {
+    .mainMenu .nav-link{
+        font-size: 14px;
+    }
+}
+@media (max-width: 992px){
+    .mainLogo{
+        display: none;
+    }
+}
+ul.navbar-nav {
+    padding-top: 10px;
+}
+.d-lg-none li.nav-item {
+    text-align: center;
+    font-weight: 500;
+}
+.action-btn.nav-link:hover {
+    color: #fff;
+    font-weight: 500;
+}
+.d-lg-none hr.dropdown-divider {
+    width: 70%;
+    /* text-align: center; */
+    margin: auto;
+}
+.btn-check:focus+.btn, .btn:focus{
+    box-shadow: none!important;
+}
+button.btn.name-tag {
+    cursor: default;
+}
+.profile ul.dropdown-menu.show {
+    box-shadow: 0px 0px 11px #d2cece;
+    background-color: #fff;
+    border: 0px;
+    border-radius: 5px;
 }
