--- a/src/app/take-actions/take-actions.component.html
+++ b/src/app/take-actions/take-actions.component.html
@@ -1,8 +1,11 @@
-<section class="bg-light-gray">
+<section class="extra-padding">
     <div class="container">
         <div class="row">
-            <div class="mt-3 col-12">
+            <div class="mt-3 col-12 special-header">
                 <h3 class="text-black f-800">Case #5678</h3>
+                <button class="pl-2 gray-btn">
+                    <small class="text-pink">DOWNLOAD FULL TRAIL</small>
+                </button>
             </div>
             <div class="py-2 col-12 col-md-6">
                 <label class="f-500">Request Date:</label>
@@ -21,117 +24,40 @@
                 <small class="mx-2">Finance</small>
             </div>
         </div>
+        </div>
+        </section>
+        <section class="bg-alt">
+            <div class="container">
+         
         <div class="row">
             <div class="col-12">
                 <div class="my-2 custom-container">
-                    <h6 class="text-black f-800">Case Information</h6>
-                    <div class="mb-3">
-                        <label class="f-500">Case Title</label>
-                        <p class="disabled-text">Man writes empty checks</p>
-                    </div>
-                    <div class="mb-3">
-                        <label class="f-500">Case Description</label>
-                        <p class="disabled-text">A man walked in one day, he had a gun.. turns out it's a lighter (oldest trick in the book), no felony but neither was it safe.
-                            Anyway, man has traveller's checkbook but it's full with mickey mouse stickers. Funny? No.
-                        </p>
-                    </div>
-                    <div class="mb-3">
-                        <label for="formFileMultiple"class="f-500">Attachments</label>
-                        <ul>
-                            <li class="disabled-text">File Name 1 
-                                <button class="pl-2 pink-btn">
-                                <Small>DOWNLOAD</Small>
-                            </button>
-                            </li>
-                            <li class="disabled-text">File Name 2 
-                                <button class="pl-2 pink-btn">
-                                <Small>DOWNLOAD</Small>
-                            </button>
-                            </li>
-                        </ul>
-                    </div>
+                    <div class="d-flex align-items-start">
+                        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                          <button class="nav-link active" id="v-pills-details-tab" data-bs-toggle="pill" data-bs-target="#v-pills-details" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Case Details</button>
+                          <button class="nav-link" id="v-pills-history-tab" data-bs-toggle="pill" data-bs-target="#v-pills-history" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Case Actions</button>
+                          <button class="nav-link" id="v-pills-actions-tab" data-bs-toggle="pill" data-bs-target="#v-pills-actions" type="button" role="tab" aria-controls="v-pills-messages" aria-selected="false">Take Action</button>
+                        </div>
+                        <div class="tab-content" id="v-pills-tabContent">
+                            <div class="tab-pane fade show active" id="v-pills-details" role="tabpanel" aria-labelledby="v-pills-details-tab">
+                                <app-case-details></app-case-details>
+                            </div>
+                            <div class="tab-pane fade show" id="v-pills-history" role="tabpanel" aria-labelledby="v-pills-history-tab">
+
+                                <app-case-history></app-case-history>
+                            </div>
+                            <div class="tab-pane fade show" id="v-pills-actions" role="tabpanel" aria-labelledby="v-pills-actions-tab">
+
+                                <app-case-action></app-case-action>
+                            </div>
+                          
+                        </div>
+                      </div>
+                 
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="my-1 custom-container">
-                    <h6 class="text-black f-800">Actions History</h6>
-                    <hr>
-                    <div class="row">
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Action</label>
-                                <p class="disabled-text">Request More Info</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Action Date</label>
-                                <p class="disabled-text">25/11/2022</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Action By</label>
-                                <p class="disabled-text">Fraud Team</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Team</label>
-                                <p class="disabled-text">Finance</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-12">
-                            <div class="mb-3">
-                                <label class="f-500">Comment</label>
-                                <p class="disabled-text">Lorem Ipsum is simply dummy text of the printing and 
-                                    typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has 
-                                    survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more 
-                                    recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class=" row">
-            <div class="col-12">
-                <div class="my-1 mb-3 custom-container">
-                    <h6 class="text-black mb-2 f-800">Action</h6>
-                    <div class="row">
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Action</label>
-                                <select class="form-control special">
-                                    <option selected disabled></option>
-                                    <option value="1">Request More Information</option>
-                                    <option value="2">Fraud</option>
-                                    <option value="3">Not Fraud</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-12">
-                            <div class="mb-3">
-                                <label class="f-500">Comment:<small class="pl-2 text-danger">*</small><small class="pl-2 d-none text-danger">Missing Field</small></label>
-                                <textarea rows="2" type="text" class="special form-control"></textarea>
-                            </div>
-                            <div class="mb-3">
-                                <label for="formFileMultiple"class="f-500">Attachments</label>
-                                <input class="form-control" type="file" id="formFileMultiple" multiple>
-                            </div>
-                        </div>
-                        <div class="mt-4 text-right">
-                            <button class="pink-btn">
-                                SEND
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
+        
     </div>
 </section>
