--- a/src/app/view-request/view-request.component.html
+++ b/src/app/view-request/view-request.component.html
@@ -1,4 +1,4 @@
-<section class="bg-light-gray">
+<section class="extra-padding">
     <div class="container">
         <div class="row">
             <div class="mt-3 col-12">
@@ -21,121 +21,145 @@
                 <small class="mx-2">Finance</small>
             </div>
         </div>
+    </div>
+</section>
+<section class="bg-alt">
+    <div class="container">
+
+
         <div class="row">
             <div class="col-12">
                 <div class="my-2 custom-container">
-                    <h6 class="text-black f-800">Case Information</h6>
-                    <div class="mb-3">
-                        <label class="f-500">Case Title</label>
-                        <p class="disabled-text">Man writes empty checks</p>
-                    </div>
-                    <div class="mb-3">
-                        <label class="f-500">Case Description</label>
-                        <p class="disabled-text">A man walked in one day, he had a gun.. turns out it's a lighter (oldest trick in the book), no felony but neither was it safe.
-                            Anyway, man has traveller's checkbook but it's full with mickey mouse stickers. Funny? No.
-                        </p>
-                    </div>
-                    <div class="mb-3">
-                        <label for="formFileMultiple"class="f-500">Attachments</label>
-                        <ul>
-                            <li class="disabled-text">File Name 1 
-                                <button class="pl-2 pink-btn">
-                                <Small>DOWNLOAD</Small>
-                            </button>
-                            </li>
-                            <li class="disabled-text">File Name 2 
-                                <button class="pl-2 pink-btn">
-                                <Small>DOWNLOAD</Small>
-                            </button>
-                            </li>
-                        </ul>
-                    </div>
+                    <div class="d-flex align-items-start">
+                        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                          <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill" data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home" aria-selected="true">Case Details</button>
+                          <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill" data-bs-target="#v-pills-profile" type="button" role="tab" aria-controls="v-pills-profile" aria-selected="false">Case Actions</button>
+                        </div>
+                        <div class="tab-content" id="v-pills-tabContent">
+                          <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                           
+                            <div class="mb-3">
+                                <label class="f-500">Case Title</label>
+                                <p class="disabled-text">Man writes empty checks</p>
+                            </div>
+                            <div class="mb-3">
+                                <label class="f-500">Case Description</label>
+                                <p class="disabled-text">A man walked in one day, he had a gun.. turns out it's a lighter
+                                    (oldest trick in the book), no felony but neither was it safe.
+                                    Anyway, man has traveller's checkbook but it's full with mickey mouse stickers. Funny? No.
+                                </p>
+                            </div>
+                            <div class="mb-3">
+                                <label for="formFileMultiple" class="f-500">Attachments</label>
+                                <ul>
+                                    <li class="disabled-text">File Name 1
+                                        <button class="pl-2 pink-btn">
+                                            <Small>DOWNLOAD</Small>
+                                        </button>
+                                    </li>
+                                    <li class="disabled-text">File Name 2
+                                        <button class="pl-2 pink-btn">
+                                            <Small>DOWNLOAD</Small>
+                                        </button>
+                                    </li>
+                                </ul>
+                            </div>
+                          </div>
+                          <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
+                            
+                            <div class="row">
+                                <div class="col-12 col-md-6">
+                                    <div class="mb-3">
+                                        <label class="f-500">Action</label>
+                                        <p class="disabled-text">Request More Info</p>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="mb-3">
+                                        <label class="f-500">Action Date</label>
+                                        <p class="disabled-text">25/11/2022</p>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="mb-3">
+                                        <label class="f-500">Action By</label>
+                                        <p class="disabled-text">Fraud Team</p>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="mb-3">
+                                        <label class="f-500">Team</label>
+                                        <p class="disabled-text">Finance</p>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-12">
+                                    <div class="mb-3">
+                                        <label class="f-500">Comment</label>
+                                        <p class="disabled-text">Lorem Ipsum is simply dummy text of the printing and
+                                            typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
+                                            since the 1500s,
+                                            when an unknown printer took a galley of type and scrambled it to make a type
+                                            specimen book. It has
+                                            survived not only five centuries, but also the leap into electronic typesetting,
+                                            remaining essentially unchanged.
+                                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+                                            Ipsum passages, and more
+                                            recently with desktop publishing software like Aldus PageMaker including versions of
+                                            Lorem Ipsum.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-12 col-md-6">
+                                    <div class="mb-3">
+                                        <label class="f-500">Action</label>
+                                        <p class="disabled-text">NOT FRAUD</p>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="mb-3">
+                                        <label class="f-500">Action Date</label>
+                                        <p class="disabled-text">26/11/2022</p>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="mb-3">
+                                        <label class="f-500">Action By</label>
+                                        <p class="disabled-text">Fraud Team</p>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="mb-3">
+                                        <label class="f-500">Team</label>
+                                        <p class="disabled-text">N/A</p>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-md-12">
+                                    <div class="mb-3">
+                                        <label class="f-500">Comment</label>
+                                        <p class="disabled-text">orem Ipsum is simply dummy text of the printing and
+                                            typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
+                                            since the 1500s,
+                                            when an unknown printer took a galley of type and scrambled it to make a type
+                                            specimen book. It has
+                                            survived not only five centuries, but also the leap into electronic typesetting,
+                                            remaining essentially unchanged.
+                                            It was popularised in the 1960s with the release of Letraset sheets containing Lorem
+                                            Ipsum passages, and more
+                                            recently with desktop publishing software like Aldus PageMaker including versions of
+                                            Lorem Ipsum.</p>
+                                    </div>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="my-1 custom-container">
-                    <h6 class="text-black f-800">Actions</h6>
-                    <hr>
-                    <div class="row">
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Action</label>
-                                <p class="disabled-text">Request More Info</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Action Date</label>
-                                <p class="disabled-text">25/11/2022</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Action By</label>
-                                <p class="disabled-text">Fraud Team</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Team</label>
-                                <p class="disabled-text">Finance</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-12">
-                            <div class="mb-3">
-                                <label class="f-500">Comment</label>
-                                <p class="disabled-text">Lorem Ipsum is simply dummy text of the printing and 
-                                    typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has 
-                                    survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more 
-                                    recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Action</label>
-                                <p class="disabled-text">NOT FRAUD</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Action Date</label>
-                                <p class="disabled-text">26/11/2022</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Action By</label>
-                                <p class="disabled-text">Fraud Team</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-6">
-                            <div class="mb-3">
-                                <label class="f-500">Team</label>
-                                <p class="disabled-text">N/A</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md-12">
-                            <div class="mb-3">
-                                <label class="f-500">Comment</label>
-                                <p class="disabled-text">orem Ipsum is simply dummy text of the printing and 
-                                    typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                                    when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has 
-                                    survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
-                                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more 
-                                    recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+       
         <div class="row pb-3">
             <div class="col-12">
                 <button class="white-btn-100 my-2">
@@ -147,7 +171,7 @@
                     <fa-icon class="text-pink" [icon]="faArrowRightLong"></fa-icon>
                 </button>
             </div>
-            
+
         </div>
     </div>
 </section>
