--- a/src/styles.css
+++ b/src/styles.css
@@ -91,7 +91,7 @@ button.gray-btn {
     box-shadow: 0 0 0 0;
 }
 .custom-container {
-    background-color: #fff;
+    background-color: #eaf6f7;
     padding: 15px;
     border-radius: 5px;
     box-shadow: 0px 0px 5px #e5e5e5;
@@ -102,5 +102,23 @@ section.bg-light-gray {
 .custom-header {
     display: flex;
     align-items: baseline;
+    justify-content: space-between;
+}
+.bg-alt{
+    background-color: #008A91 ;
+    min-height: 55vh;
+}
+.extra-padding{
+    padding-bottom: 100px;
+}
+.custom-container{
+    margin-top: -80px!important;
+}
+div#v-pills-tab {
+    min-width: 15%;
+}
+.special-header {
+    display: flex;
+    align-items: center;
     justify-content: space-between;
 }
